@@ -3486,7 +3486,7 @@ str:
         <h4>Branch on greater than equal zero and link</h4>
         <table class="inst" align="center" border="1" cellpadding="2" cellspacing="0" frame="box" rules="all" width="300">
                 <tr class="instformat">
-                        <th align="center" colspan="9">bgez rs, label</th>
+                        <th align="center" colspan="9">bgezal rs, label</th>
                 </tr>
                 <tr class="instops">
                         <th align="center" width="40">1 </th>
@@ -5298,7 +5298,7 @@ str:
                 </tr>
                 <tr class="instops">
                         <th align="center" width="40">0x11 </th>
-                        <th align="center" width="40">0x101</th>
+                        <th align="center" width="40">0x11</th>
                         <th align="center" width="40">ft </th>
                         <th align="center" width="40">fs </th>
                         <th align="center" width="40">fd </th>
@@ -5883,7 +5883,7 @@ str:
                 </tr>
                 <tr class="instops">
                         <th align="center" width="40">0x11 </th>
-                        <th align="center" width="40">0x10 </th>
+                        <th align="center" width="40">0x11 </th>
                         <th align="center" width="40">ft </th>
                         <th align="center" width="40">fs </th>
                         <th align="center" width="40">fd </th>
